update some of the code

--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -8,6 +8,9 @@
     <title>Home | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.png">
+    <meta property="og:title" content="Homepage of pyblog">
+    <meta property="og:description" content="Only the best blogs can be found here">
+    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
     <style>
