--- a/search-mobile.html
+++ b/search-mobile.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen" />
   <link rel="icon" type="image/x-icon" href="icon.png">
+  <meta property="og:title" content="Search for blogs">
+  <meta property="og:description" content="Use this page to search for various blogs that can be found on the website.">
+  <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
   <title>Search Restuls | Pyblog</title>
   <style>
     .result-container {
