--- a/Blogs/Using-Sockets-For-Networking-Mobile.html
+++ b/Blogs/Using-Sockets-For-Networking-Mobile.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <title>Using Sockets For Networking | PyBlog</title>
-        <link rel="icon" type="image/x-icon" href="../icon_rounded.png"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-        crossorigin="anonymous"></script>
+        <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
     </head>
 <body>
     This blog currently does not exist but is underway! In the meantime return to the <a href="../Home-Mobile.html">homepage</a>
