--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -253,7 +253,7 @@
       </b></p>
     </div>
   </div>
-  <p id="tableNumber">1/3</p><br>
+  <p id="tableNumber" class="pageNumber">1/3</p><br>
   <button onclick="toggleElementsBack()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&lt;</button>
   <button onclick="toggleElements()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&gt;</button>
 
