--- a/Blogs/Installing-Modules-And-Using-Them.html
+++ b/Blogs/Installing-Modules-And-Using-Them.html
@@ -160,7 +160,20 @@ with open("data.json", "r") as f:
     name = json.load(f)
 print(name)
     </code>                <div class="copy-button" onclick="copyCode('code-block-2')"></div></pre>
-    <br><br><br>
+    <br><br>
+    <p>
+      And now we need to create the data.json file so it can read the data
+      without causing an error
+    </p><br>
+    <pre><div class="file-tag">data.json</div><code id="code-block-3" style="color: white;">{
+    "name": "Bailey"
+}
+</code>        <div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
+  <br><br><p>
+    Now with this you can use a json file to load and save data into python.
+  </p>    
+
+<br><br><br>
     <p>Created by <a href="../authors/ItsBailey" style="color: salmon; text-decoration: none;">ItsBailey</a></p>
     <br><br><br><br><br><br><br><br><br>
     <a class="button" href="../Home">Back To Home</a>
