--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -153,7 +153,7 @@
     function isMobileDevice() {
       const userAgent = navigator.userAgent.toLowerCase();
       const mobileKeywords = ['android', 'webos', 'iphone', 'ipad', 'ipod', 'blackberry', 'windows phone'];
-  
+
       return mobileKeywords.some(keyword => userAgent.includes(keyword));
     }
   
@@ -214,7 +214,7 @@
         Making a Chatbot With Python
       </b></p>
     </div>
-  </div><br>
+  </div>
   <div class="grid-container" id="gridContainer2" style="display: none;">
     <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python-Mobile'" style="cursor: pointer;">
       <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
@@ -250,6 +250,26 @@
       <img src="Blogs/home-page-images/Terminal-Games.png" class="blog-img">
       <p><b>
         Terminal Games With Python
+      </b></p>
+    </div>
+  </div>
+  <div class="grid-container" id="gridContainer3" style = "display: none;">
+    <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
+      <img src="sad.png" class="blog-img">
+      <p><b>
+        This blog doesnt exist yet.
+      </b></p>
+    </div>
+    <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
+      <img src="sad.png" class="blog-img">
+      <p><b>
+        This blog doesnt exist yet.
+      </b></p>
+    </div>
+    <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
+      <img src="sad.png" class="blog-img">
+      <p><b>
+        This blog doesnt exist yet.
       </b></p>
     </div>
   </div>
