--- a/Home.html
+++ b/Home.html
@@ -163,7 +163,7 @@
           Making a Chatbot With Python
         </b></p>
       </div>
-    </div><br>
+    </div>
     <div class="grid-container" id="gridContainer2" style="display: none;">
       <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
         <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
