--- a/Blogs/Installing-Modules-And-Using-Them.html
+++ b/Blogs/Installing-Modules-And-Using-Them.html
@@ -171,8 +171,58 @@ print(name)
 </code>        <div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
   <br><br><p>
     Now with this you can use a json file to load and save data into python.
-  </p>    
-
+  This can allow you to create many more games with this skill such as
+  clicker games and FPS with a story. Json can be used for other purposes like
+  I have used, to store names and ages etc.
+  </p>
+  <h3>Tkinter</h3>
+  <p>
+    There are already quite a few good blogs that are on this website
+    that cover tkinter so instead of giving code examples I will just explain 
+    what tkinter is and does.<br><br>Tkinter is a GUI application that comes
+    installed with python by default, with tkinter you can create various apps
+    like calculators and equation machines which is very good for beginners of python.
+    You can view the other blogs <a href="../Blogs/Desktop-Applications-With-Tkinter.html" style="text-decoration: none; color: salmon">here</a>
+  </p>
+  <h2>Popular user built modules</h2>
+    <p>
+        We will quickly cover the basics of these modules that are built by others:
+        <br>&bullet; Pygame<br>
+        &bullet; auto-py-to-exe<br>
+        &bullet; Flask<br><br>
+        There are hundreds, if not thousands of user built modules, you can find them all on <a href="https://pypi.org/" style="text-decoration: none; color: salmon">pypi</a>.
+        Who knows you could be another one of the people that creates modules for the community to use!
+    </p>
+    <h3>Pygame</h3>
+    <p>
+      Pygame is one of the most popular game engines in python with loads of games
+      being made each day and it's really simple to create a game with it. Below you can see an
+      exapmle of a game I made with pygame that you can download and play!<br>
+    <br><button href="Installing-And-Using-Them-Stuff/Pygame.py">Download</button> - Pygame.py
+    <br><br>It's a simple game where you catch falling objects and it adds
+    up your score. But pygame can be used to create any game you've ever wanted.
+    It uses mostly simple python syntax and is compatible with almost every module
+    that exists in python, there are some awesome tutorials online for pygame 
+    as the pygame community is massive and the module constantly gets updated to
+    keep it as fresh as possible. 
+    </p>
+    <h3>Auto-py-to-exe</h3>
+    <p>
+      Auto-py-to-exe is one of the most helpful modules I've personally ever seen.
+      Auto-py-to-exe does exactly what the name suggests, it turns any python file/script 
+      into a runnable executable file that  windows can run, you dont even need python
+      to run the .exe file as it comes packed with it and the file size for the game
+      only ends up being around 200MB which is incredibly good! you can install it from pip
+      or pypi and can open the GUI by typing "auto-py-to-exe" into the terminal. I can't really
+      provide an example but here is a screenshot of what it looks like.<br><br> <img src="Installing-And-Using-Them-Stuff/auto-py-to-exe.webp">
+      Overall auto-py-to-exe is one of the best modules out there, and of course pyinstaller the
+      root module that makes it all happen.
+    </p>
+    <h3>Ursina</h3>
+    <p>
+      Just like tkinter there are already blogs covering ursina in good detail
+      so I will link
+    </p>
 <br><br><br>
     <p>Created by <a href="../authors/ItsBailey" style="color: salmon; text-decoration: none;">ItsBailey</a></p>
     <br><br><br><br><br><br><br><br><br>
