just switch up everything

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>404 | PyBlog</title>
-    <link rel="icon" type="image/x-icon" href="icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="icon_rounded.webp">
     <style>
       body {
             background-color: #f2f2f2;
@@ -87,7 +87,8 @@
         '/blogs/machine-learning-with-python-mobile',
         '/blogs/using-sockets-for-networking',
         '/blogs/using-sockets-for-networking-2',
-        '/blogs/the-history-of-python'
+        '/blogs/the-history-of-python',
+        '/blogs/types-of-modules-and-how-to-use-them'
       ];
     
       const uppercasePaths = [
@@ -114,7 +115,8 @@
         '/Blogs/Machine-Learning-With-Python-Mobile',
         '/Blogs/Using-Sockets-For-Networking',
         '/Blogs/Using-Sockets-For-Networking-2',
-        '/Blogs/The-History-Of-Python'
+        '/Blogs/The-History-Of-Python',
+        '/Blogs/Types-Of-Modules-And-Using-Them'
       ];
     
       const currentPage = window.location.pathname.toLowerCase();
