--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -3,7 +3,7 @@
   <head>
     <title>Creating a web application with flask | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
     <style>
       .img-preset {
@@ -46,7 +46,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -99,7 +99,7 @@
   <body>
     <br><br>
     <!--Optional image placement-->
-    <img src="Flask-stuff/Flask.png" style="zoom:0.6;" class="img-preset">
+    <img src="Flask-stuff/Flask.webp" style="zoom:0.6;" class="img-preset">
     <h1>Creating web applications with python flask.</h1><br>
     <h3>Difficulty: Intermediate</h3>
 
@@ -156,7 +156,7 @@ app.run('localhost', 5000)
     </code>         <div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
     <br><br>
     <p>If you did everything correctly, the webpage should look like this!</p><br>
-    <img src="Flask-stuff/first-website-result.png" class="img-preset">
+    <img src="Flask-stuff/first-website-result.webp" class="img-preset">
     <br>
     <p>
       Now you're thinking, how do you create proper websites with it because just adding
