--- a/Blogs/Installing-Python-Mobile.html
+++ b/Blogs/Installing-Python-Mobile.html
@@ -70,7 +70,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -144,7 +144,7 @@
 
   <!-- MAIN STUFF-->
   <br><br>
-    <img src="Python-Introduction-Files\python_logo.png" class="img-preset">
+    <img src="Python-Introduction-Files\python_logo.webp" class="img-preset">
     <h1>Installing Python</h1>
     <h3>Difficulty: Beginner</h3>
 
