--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -3,7 +3,7 @@
   <head>
     <title>Machine Learning With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
     <style>
       .img-preset {
@@ -44,7 +44,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -118,7 +118,7 @@
   <body>
 
     <br><br>
-    <img src="home-page-images/Machine-Learning.png" style="width: 30%;">
+    <img src="home-page-images/Machine-Learning.webp" style="width: 30%;">
     <h1>Machine Learning With Python</h1>
     <h3>Difficulty: Advanced</h3>
 
