--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -3,7 +3,7 @@
   <head>
     <title>Making a chatbot with python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     <style>
       .img-preset {
         width: 250px;
@@ -43,7 +43,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -143,7 +143,7 @@
                <div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
                <br><br>You can find your openAI key <a href="https://platform.openai.com/account/api-keys">here</a>
                it should look like this:<br><br> 
-               <img class="center" src="Making-a-chatbot-stuff/API_keys.png" width="500px"><br> 
+               <img class="center" src="Making-a-chatbot-stuff/API_keys.webp" width="500px"><br> 
                You may have to create a new API key which you can do by clicking "Create new secret key"
                <br><br><br><li>Define a function to interact with the chatbot. Here's a simple example:</li>
                <br><pre><code id="code-block-4" style="color: white;">def chat_with_bot(message):
