--- a/Blogs/Python-Fundamentals.html
+++ b/Blogs/Python-Fundamentals.html
@@ -3,7 +3,7 @@
   <head>
     <title>Python Fundamentals | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     <style>
       .img-preset {
         width: 250px;
@@ -45,7 +45,7 @@
           height: 40px;
           border-radius: 50%;
           background-color: #383838;
-          background-image: url("../copy.png");
+          background-image: url("../copy.webp");
           color: #fff;
           background-size: 36px;
           background-position: center;
@@ -135,7 +135,7 @@
     
     </script>
     <br><br>
-    <img src="home-page-images/Python-Fundamentals.png" style="width: 30%;">
+    <img src="home-page-images/Python-Fundamentals.webp" style="width: 30%;">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Beginner</h3>
 
