--- a/Blogs/Python-Introduction-Mobile.html
+++ b/Blogs/Python-Introduction-Mobile.html
@@ -80,7 +80,7 @@
   </script>
   <!-- MAIN STUFF-->
   <br><br>
-    <img src="Python-Introduction-Files/python_logo.png" class="img-preset">
+    <img src="Python-Introduction-Files/python_logo.webp" class="img-preset">
     <h1>Python: An Intorduction into the world of Python</h1>
     <h3>Difficulty: Beginner</h3>
 
