--- a/Blogs/Python-Introduction.html
+++ b/Blogs/Python-Introduction.html
@@ -3,7 +3,7 @@
   <head>
     <title>Python Introduction | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
     <style>
@@ -51,7 +51,7 @@
     
     </script>
     <br><br>
-    <img src="Python-Introduction-Files/python_logo.png" class="img-preset">
+    <img src="Python-Introduction-Files/python_logo.webp" class="img-preset">
     <h1 class="paragraph">Python: An Intorduction into the world of Python</h1>
     <h3>Difficulty: Beginner</h3>
 
