--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -3,7 +3,7 @@
   <head>
     <title>Template | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     <meta property="og:title" content="A pyblog blog">
     <meta property="og:description" content="Only the best blogs can be found here">
     <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
@@ -50,7 +50,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -103,7 +103,7 @@
   <body>
     <br><br>
     <!--Optional image placement-->
-    <!--<img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">-->
+    <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>Title</h1>
     <p>
       Paragraph
