--- a/Blogs/Terminal-Games-With-Python.html
+++ b/Blogs/Terminal-Games-With-Python.html
@@ -3,7 +3,7 @@
   <head>
     <title>Terminal Games With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
     <style>
       .img-preset {
@@ -46,7 +46,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -113,7 +113,7 @@
       }
     </script>
     <br><br>
-    <img src="home-page-images/Terminal-Games.png" class="img-preset">
+    <img src="home-page-images/Terminal-Games.webp" class="img-preset">
     <br><br>
     <h1>Terminal Games With Python</h1>
     <h3>Difficulty: Beginner</h3>
