--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -3,7 +3,7 @@
   <head>
     <title>The History of python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     <meta property="og:title" content="The history of python">
     <meta property="og:description" content="The entire history of python and what it is">
     <meta property="og:image" content="https://pyblog.ddns.net/Blogs/home-page-images/time.jpg">
@@ -48,7 +48,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -112,7 +112,7 @@
       </script>
     <br><br>
     <!--Optional image placement-->
-    <!--<img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">-->
+    <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>The history of python.</h1>
     <p>
         Python, a high-level programming language known for its simplicity and 
