--- a/Blogs/Using-Sockets-For-Networking-2.html
+++ b/Blogs/Using-Sockets-For-Networking-2.html
@@ -49,7 +49,7 @@
               height: 40px;
               border-radius: 50%;
               background-color: #383838;
-              background-image: url("../copy.png");
+              background-image: url("../copy.webp");
               color: #fff;
               background-size: 36px;
               background-position: center;
