--- a/Blogs/Using-Sockets-For-Networking-Mobile.html
+++ b/Blogs/Using-Sockets-For-Networking-Mobile.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Using Sockets For Networking | PyBlog</title>
-        <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+        <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     </head>
 <body>
     This blog currently does not exist but is underway! In the meantime return to the <a href="../Home-Mobile.html">homepage</a>
