--- a/Blogs/Creating-Simulations-With-Python-Mobile.html
+++ b/Blogs/Creating-Simulations-With-Python-Mobile.html
@@ -70,7 +70,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -164,7 +164,7 @@
   
   </script>
 <br><br>
-<img src="home-page-images/Creating-Simulations.png" style="width: 60%;">
+<img src="home-page-images/Creating-Simulations.webp" style="width: 60%;">
 <h1>Creating Simulations With Python</h1>
 <h3>Difficulty: Intermediate</h3>
 
