--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -3,7 +3,7 @@
   <head>
     <title>Creating Simulations With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
     <style>
       .img-preset {
@@ -45,7 +45,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -134,7 +134,7 @@
     
     </script>
     <br><br>
-    <img src="home-page-images/Creating-Simulations.png" style="width: 30%;">
+    <img src="home-page-images/Creating-Simulations.webp" style="width: 30%;">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Intermediate</h3>
 
