--- a/Blogs/How-To-Use-VSCode-Mobile.html
+++ b/Blogs/How-To-Use-VSCode-Mobile.html
@@ -70,7 +70,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -142,7 +142,7 @@
   
   </script>
 <br><br>
-<img src="home-page-images/VS-Code.png" class="img-preset">
+<img src="home-page-images/VS-Code.webp" class="img-preset">
 <h1>How To Use VS Code</h1>
 <h3>Difficulty: Beginner</h3>
 
