--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Template | PyBlog</title>
+    <title>Types of modules | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
-    <meta property="og:title" content="A pyblog blog">
-    <meta property="og:description" content="Only the best blogs can be found here">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
+    <meta property="og:title" content="Types of modules">
+    <meta property="og:description" content="Discussing python modules and how to use then and what they do in general.">
     <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>   
     <style>
       .img-preset {
         width: auto;
@@ -54,7 +56,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.png");
+            background-image: url("../copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -107,7 +109,7 @@
   <body>
     <br><br>
     <!--Optional image placement-->
-    <!--<img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">-->
+    <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>Installing and using modules in python</h1>
     <p>
       Grab some popcorn because this one is gonna be a long one!<br><br>Modules are a key part of python that keep it running. Most modules are
@@ -189,7 +191,7 @@ print(name)
         We will quickly cover the basics of these modules that are built by others:
         <br>&bullet; Pygame<br>
         &bullet; auto-py-to-exe<br>
-        &bullet; Flask<br><br>
+        &bullet; Ursina<br><br>
         There are hundreds, if not thousands of user built modules, you can find them all on <a href="https://pypi.org/" style="text-decoration: none; color: salmon">pypi</a>.
         Who knows you could be another one of the people that creates modules for the community to use!
     </p>
@@ -221,7 +223,26 @@ print(name)
     <h3>Ursina</h3>
     <p>
       Just like tkinter there are already blogs covering ursina in good detail
-      so I will link
+      so I will link and quickly go over ursina in the section. You can see the full
+      blog <a href="../Blogs/Introduction-Into-Ursina" style="color: salmon; text-decoration: none;">here</a>
+    </p>
+    <h4>What is Ursina?</h4>
+    <p>
+      Ursina is latin for little bear and is a really powerful but simple 3D and 2D game engine
+      developed by the all powerful, <a href="https://github.com/pokepetter" style="color: salmon; text-decoration: none;">Pokepetter</a>. 
+      Ursina is based on Disney's panda3d system but ursina makes the whole system much more easier
+      to use with prefabs like a platform controller and the "FPC" AKA First person controller.
+      Overall ursina is one the best engines for python out there and it was the first ever engine
+      I ever used to make a 3D game. If you wanna try out one of my games with ursina you can by going to
+      my github repo and downloading it <a href="https://github.com/ItsbaileyX3525/amogus-clicker" style="color: salmon; text-decoration: none;">here</a>
+      or you can try the web-based version <a href="https://baileyswebsite.ddns.net/Games/AmogusClicker" style="color: salmon; text-decoration: none;">here</a>
+    </p>
+    <h2>In conclusion</h2>
+    <p>
+      There are loads of modules that are helpful and whatever you need in python
+      there is, without a doubt, a module out there for it and I highly recommend you research
+      as much modules as you can when developing games as you never know when you might need
+      a certain module. Thank you for reading this blog and I can't wait to see you in the next blog!
     </p>
 <br><br><br>
     <p>Created by <a href="../authors/ItsBailey" style="color: salmon; text-decoration: none;">ItsBailey</a></p>
