--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -150,6 +150,7 @@
   </header>
 <body>
   <script>
+    /*
     function isMobileDevice() {
       const userAgent = navigator.userAgent.toLowerCase();
       const mobileKeywords = ['android', 'webos', 'iphone', 'ipad', 'ipod', 'blackberry', 'windows phone'];
@@ -162,7 +163,7 @@
     } else {
       window.location.replace("https://pyblog.ddns.net/Home")
     }
-  
+  */
   </script>
   <!-- About PyBlog -->
   <h2 id="about-pyblog">About PyBlog</h2>
@@ -185,7 +186,7 @@
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Python-Fundamentals.png" class="blog-img">
+      <img src="Blogs/home-page-images/Python-Fundamentals.webp" class="blog-img">
       <p><b>
         Python Fundamentals
       </b></p>
@@ -197,19 +198,19 @@
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
+      <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.webp" class="blog-img">
       <p><b>
         Deeper Exploration of Tkinter
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
+      <img src="Blogs/home-page-images/Introduction-Into-Ursina.webp" class="blog-img">
       <p><b>
         Introduction Into Ursina Engine
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
+      <img src="Blogs/home-page-images/Making-Chatbot-With-Python.webp" class="blog-img">
       <p><b>
         Making a Chatbot With Python
       </b></p>
@@ -217,19 +218,19 @@
   </div>
   <div class="grid-container" id="gridContainer2" style="display: none;">
     <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
+      <img src="Blogs/home-page-images/Machine-Learning.webp" class="blog-img">
       <p><b>
         Machine Learning With Python
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python-Mobile'" style="cursor: pointer;">
-     <img src="Blogs/home-page-images/Creating-Simulations.png" class="blog-img">
+     <img src="Blogs/home-page-images/Creating-Simulations.webp" class="blog-img">
      <p><b>
       Creating Simulations With Python
      </b></p>
    </div>
    <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask-Mobile'" style="cursor: pointer;">
-    <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
+    <img src="Blogs/Flask-stuff/Flask.webp" class="blog-img">
     <p><b>
       Making a website With flask
     </b></p>
@@ -247,7 +248,7 @@
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Terminal-Games-With-Python-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Terminal-Games.png" class="blog-img">
+      <img src="Blogs/home-page-images/Terminal-Games.webp" class="blog-img">
       <p><b>
         Terminal Games With Python
       </b></p>
@@ -255,19 +256,19 @@
   </div>
   <div class="grid-container" id="gridContainer3" style = "display: none;">
     <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
-      <img src="sad.png" class="blog-img">
+      <img src="sad.webp" class="blog-img">
       <p><b>
         This blog doesnt exist yet.
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
-      <img src="sad.png" class="blog-img">
+      <img src="sad.webp" class="blog-img">
       <p><b>
         This blog doesnt exist yet.
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
-      <img src="sad.png" class="blog-img">
+      <img src="sad.webp" class="blog-img">
       <p><b>
         This blog doesnt exist yet.
       </b></p>
@@ -284,13 +285,13 @@
     <!-- Helpful Blogs-->
     <div class="grid-container">
       <div class="grid-item" onclick="window.location.href='Blogs/Installing-Python-Mobile'" style="cursor: pointer;">
-        <img src="Blogs/Python-Introduction-Files/python_logo.png">
+        <img src="Blogs/Python-Introduction-Files/python_logo.webp">
         <p><b>
           Installing Python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/VS-Code.png" class="blog-img">
+        <img src="Blogs/home-page-images/VS-Code.webp" class="blog-img">
         <p><b>
           Installing and Using VS Code
         </b></p>
