--- a/Home.html
+++ b/Home.html
@@ -134,7 +134,7 @@
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Python-Fundamentals.png" class="blog-img">
+        <img src="Blogs/home-page-images/Python-Fundamentals.webp" class="blog-img">
         <p><b>
           Python Fundamentals
         </b></p>
@@ -146,19 +146,19 @@
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.png" class="blog-img">
+        <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.webp" class="blog-img">
         <p><b>
           Deeper Exploration of Tkinter
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Introduction-Into-Ursina.png" class="blog-img">
+        <img src="Blogs/home-page-images/Introduction-Into-Ursina.webp" class="blog-img">
         <p><b>
           Introduction Into Ursina Engine
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Making-Chatbot-With-Python.png" class="blog-img">
+        <img src="Blogs/home-page-images/Making-Chatbot-With-Python.webp" class="blog-img">
         <p><b>
           Making a Chatbot With Python
         </b></p>
@@ -166,19 +166,19 @@
     </div>
     <div class="grid-container" id="gridContainer2" style="display: none;">
       <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Machine-Learning.png" class="blog-img">
+        <img src="Blogs/home-page-images/Machine-Learning.webp" class="blog-img">
         <p><b>
           Machine Learning With Python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python'" style="cursor: pointer;">
-       <img src="Blogs/home-page-images/Creating-Simulations.png" class="blog-img">
+       <img src="Blogs/home-page-images/Creating-Simulations.webp" class="blog-img">
        <p><b>
         Creating Simulations With Python
        </b></p>
      </div>
      <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
-      <img src="Blogs/Flask-stuff/Flask.png" class="blog-img">
+      <img src="Blogs/Flask-stuff/Flask.webp" class="blog-img">
       <p><b>
         Making a website With flask
       </b></p>
@@ -196,27 +196,27 @@
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Terminal-Games-With-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Terminal-Games.png" class="blog-img">
+        <img src="Blogs/home-page-images/Terminal-Games.webp" class="blog-img">
         <p><b>
           Terminal Games Using Python
         </b></p>
       </div>
     </div>
     <div class="grid-container" id="gridContainer3" style="display: none;">
-      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-        <img src="sad.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Terminal-Games-With-Python'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Terminal-Games.webp" class="blog-img">
         <p><b>
-          Blog doesn't exist yet
+          Types of modules in python
         </b></p>
-        </div> 
+      </div>
       <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-        <img src="sad.png" class="blog-img">
+        <img src="sad.webp" class="blog-img">
         <p><b>
           Blog doesn't exist yet
         </b></p>
         </div> 
      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-      <img src="sad.png" class="blog-img">
+      <img src="sad.webp" class="blog-img">
       <p><b>
         Blog doesn't exist yet
       </b></p>
@@ -233,13 +233,13 @@
     <!-- Helpful Blogs-->
     <div class="grid-container">
       <div class="grid-item" onclick="window.location.href='Blogs/Installing-Python'" style="cursor: pointer;">
-        <img src="Blogs/Python-Introduction-Files/python_logo.png" class="blog-img">
+        <img src="Blogs/Python-Introduction-Files/python_logo.webp" class="blog-img">
         <p><b>
           Installing Python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/VS-Code.png" class="blog-img">
+        <img src="Blogs/home-page-images/VS-Code.webp" class="blog-img">
         <p><b>
           Installing and Using VS Code
         </b></p>
