--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -255,10 +255,10 @@
     </div>
   </div>
   <div class="grid-container" id="gridContainer3" style = "display: none;">
-    <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
-      <img src="sad.webp" class="blog-img">
+    <div class="grid-item" onclick="window.location.href='Blogs/Terminal-Games-With-Python'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Modules.webp" class="blog-img">
       <p><b>
-        This blog doesnt exist yet.
+        Types of modules in python
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
