--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>404 | PyBlog</title>
     <link rel="icon" type="image/x-icon" href="icon_rounded.webp">
