--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Making a chatbot with python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
@@ -225,7 +225,7 @@ while True:
     <script src="../Scroll.js">
     </script>
     <!DOCTYPE html>
-    <html>
+    <html lang="en">
     
     <head>
       <meta charset="utf-8">
