--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Types of modules | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
