--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Creating a web application with flask | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
