--- a/Blogs/How-To-Use-VSCode.html
+++ b/Blogs/How-To-Use-VSCode.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>How To Use VS Code | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
