--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Desktop Apps with Tkinter | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
