--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Machine Learning With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
