--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Template | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
