--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>The History of python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
