--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Redirecting... | PyBlog</title>
     <link rel="icon" type="image/x-icon" href="icon.ico">
