Forgot some webp images

--- a/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
+++ b/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
@@ -144,7 +144,7 @@
 
   <!-- MAIN STUFF-->
   <br><br>
-  <img src="home-page-images/Desktop-Tkinter.jpg" class="img-preset" style="zoom:0.75;">
+  <img src="home-page-images/Desktop-Tkinter.webp" class="img-preset" style="zoom:0.75;">
   <h1>Desktop Apps with Tkinter!</h1>
   <h3>Difficulty: Beginner</h3>
 
