--- a/Blogs/Desktop-Applications-With-Tkinter.html
+++ b/Blogs/Desktop-Applications-With-Tkinter.html
@@ -117,7 +117,7 @@
       }
     </script>
     <br><br>
-    <img src="home-page-images/Desktop-Tkinter.jpg" class="img-preset">
+    <img src="home-page-images/Desktop-Tkinter.webp" class="img-preset">
     <h1>Desktop Apps with Tkinter!</h1>
     <h3>Difficulty: Beginner</h3>
 
