--- a/Blogs/Using-Sockets-For-Networking.html
+++ b/Blogs/Using-Sockets-For-Networking.html
@@ -111,7 +111,7 @@
     
     </script>
     <br><br>
-    <img src="home-page-images\Sockets.jpg" class="img-preset">
+    <img src="home-page-images\Sockets.webp" class="img-preset">
     <h1>Using Python and Sockets to Create a Chatroom.</h1>
     <h3>Difficulty: Intermediate</h3>
 
