--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
     <meta property="og:title" content="The history of python">
     <meta property="og:description" content="The entire history of python and what it is">
-    <meta property="og:image" content="https://pyblog.ddns.net/Blogs/home-page-images/time.jpg">
+    <meta property="og:image" content="https://pyblog.ddns.net/Blogs/home-page-images/time.webp">
     <style>
       .img-preset {
         width: auto;
