--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -178,7 +178,7 @@
   <!-- Fun Blogs -->
   <div class="grid-container" id="gridContainer1" style = "display: grid;">
     <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Python-Introduction.jpg" class="blog-img">
+      <img src="Blogs/home-page-images/Python-Introduction.webp" class="blog-img">
       <p><b>
         What is Python?
       </b></p>
@@ -190,7 +190,7 @@
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Desktop-Tkinter.jpg" class="blog-img">
+      <img src="Blogs/home-page-images/Desktop-Tkinter.webp" class="blog-img">
       <p><b>
         Building Desktop Applications With Tkinter
       </b></p>
@@ -234,13 +234,13 @@
     </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/Using-Sockets-For-Networking-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/Sockets.jpg" class="blog-img">
+      <img src="Blogs/home-page-images/Sockets.webp" class="blog-img">
       <p><b>
         Using sockets for networking
       </b></p>
     </div>
     <div class="grid-item" onclick="window.location.href='Blogs/The-History-Of-Python-Mobile'" style="cursor: pointer;">
-      <img src="Blogs/home-page-images/time.jpg" class="blog-img">
+      <img src="Blogs/home-page-images/time.webp" class="blog-img">
       <p><b>
         The history of python
       </b></p>
