--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Search for blogs">
   <meta property="og:description" content="Use this page to search for various blogs that can be found on the website.">
   <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
-  <title>Search Restuls | Pyblog</title>
+  <title>Search Results | Pyblog</title>
   <style>
     .result-container {
       display: flex;
