bug fixes with Chatbot Blog

--- a/Blogs/Making-A-Chatbot-With-Python-Mobile.html
+++ b/Blogs/Making-A-Chatbot-With-Python-Mobile.html
@@ -141,7 +141,7 @@
     }
   </script>
   <br><br>
-  <h1 class="paragraph">Chatbots: How to make them in python</h1>
+  <h1>Chatbots: How to make them in python</h1>
   <h3>Difficulty: Intermediate</h3>
 
 
@@ -162,7 +162,7 @@
              <div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
              <br><br>You can find your openAI key <a href="https://platform.openai.com/account/api-keys">here</a>
              it should look like this:<br><br> 
-             <img class="center" src="Making-a-chatbot-stuff/API_keys.webp" width="500px"><br> 
+             <a href="Making-a-chatbot-stuff/API_keys.webp" target="_blank"><img class="center" src="Making-a-chatbot-stuff/API_keys.webp" width="500px" style="zoom: 75%;"></a><br> 
              You may have to create a new API key which you can do by clicking "Create new secret key"
              <br><br><br><li>Define a function to interact with the chatbot. Here's a simple example:</li>
              <br><pre><code id="code-block-4" style="color: white;">def chat_with_bot(message):
