--- a/Home.html
+++ b/Home.html
@@ -212,6 +212,12 @@
           Types of modules in python
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/Creating-Minecraft-In-Ursina'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Minecraft-Ursina.webp" class="blog-img">
+        <p><b>
+          Creating A Minecraft Clone With Ursina
+        </b></p>
+      </div>
     </div><br>
     <p id="tableNumber">1/3</p><br>
     <button onclick="toggleElementsBack()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&lt;</button>
