--- a/404.html
+++ b/404.html
@@ -88,7 +88,9 @@
         '/blogs/using-sockets-for-networking',
         '/blogs/using-sockets-for-networking-2',
         '/blogs/the-history-of-python',
-        '/blogs/types-of-modules-and-how-to-use-them'
+        '/blogs/types-of-modules-and-how-to-use-them',
+        '/blogs/creating-minecraft-in-ursina',
+        '/blogs/creating-minecraft-in-ursina-mobile'
       ];
     
       const uppercasePaths = [
@@ -116,7 +118,9 @@
         '/Blogs/Using-Sockets-For-Networking',
         '/Blogs/Using-Sockets-For-Networking-2',
         '/Blogs/The-History-Of-Python',
-        '/Blogs/Types-Of-Modules-And-Using-Them'
+        '/Blogs/Types-Of-Modules-And-Using-Them',
+        '/Blogs/Creating-Minecraft-In-Ursina',
+        '/Blogs/Creating-Minecraft-In-Ursina-Mobile'
       ];
     
       const currentPage = window.location.pathname.toLowerCase();
